fix header on mobile

--- a/css/partials/_queries.scss
+++ b/css/partials/_queries.scss
@@ -71,6 +71,9 @@ $largeScreen: 1400px;
       font-size:2.8rem;
       padding-bottom:2%;
     }
+    h2{
+      margin:2% auto;
+    }
     p{
       font-size:1.5rem;
       padding::2% 5%;
