--- a/css/style.css
+++ b/css/style.css
@@ -761,6 +761,9 @@ footer {
     font-size: 2.8rem;
     padding-bottom: 2%;
   }
+  .header-text h2 {
+    margin: 2% auto;
+  }
   .header-text p {
     font-size: 1.5rem;
     padding: 2% 5%;
